--- a/src/scss/particles.scss
+++ b/src/scss/particles.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -21,3 +21,4 @@
     background-position: 0% 50%;
   }
 }
+
