--- a/src/scss/sponsors.scss
+++ b/src/scss/sponsors.scss
@@ -1,5 +1,5 @@
 .sponsors {
-  height: 100vh;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
